--- a/src/pages/productList.html
+++ b/src/pages/productList.html
@@ -1,309 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/index.html">
-    
-    <link
-      rel="shortcut icon"
-      href="../assets/img/icon.svg"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="../assets/styles/main.css" />
-    <title>Product List</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <header class="bg-white py-[15px] container mb-[76px] sticky z-30">
-        <div
-          class="container w-[1320px] mx-auto flex items-center justify-between relative"
-        >
-          <div class="nav-left flex">
-            <!-- <select name="lang" id="select">
-              <a href="#!">
-                <img src="./src/assets/img/LanguageRU.svg" alt=""
-              /></a>
-              <option value="russian">
-                <img src="./src/assets/img/LanguageRU.svg" alt="Russian" />
-                Русский
-              </option>
   
-              <option value="uzbek">
-                <img src="./src/assets/img/LanguageUZ.svg" alt="Uzbek" />
-                Английский
-              </option>
-            </select> -->
-  
-            <img
-              class="w-6"
-              id="langIcon"
-              src="../assets/img/LanguageUZ.svg"
-              alt="Language Icon"
-            />
-            <select name="lang" class="font-medium text-sm ml-1" id="select">
-              <option value="uz">Узбекский</option>
-              <option class="" value="ru">Русский</option>
-            </select>
-  
-            <div class="group ml-7">
-              <a
-                href="tel:+998 88 500 50 00"
-                class="flex align-middle text-sm font-medium w-40 group-hover:text-blue transition-all"
-              >
-                <i
-                  class="group-hover:text-blue transition-all duration-[0.3s] bx bx-phone text-[20px] text-[#B8BBBD] gap-2"
-                ></i
-                ><img src="../assets/img/icons/phone.svg" alt="" />+998 88
-                500-50-00</a
-              >
-            </div>
-          </div>
-  
-          <div
-            class="logo absolute left-1/2 translate-x-[-50%] py-3.5 px-4 shadow-xl shadow-gray-300 rounded-bl-[20px] rounded-br-[20px] mt-6 bg-white"
-          >
-            <a href="/index.html"
-              ><img src="../assets/img/logo.svg" alt=""
-            /></a>
-          </div>
-  
-          <div class="login flex items-center">
-            <a
-              href="#"
-              class="flex font-semibold hover:text-blue transition-all mr-1"
-              ><i class="bx bx-heart text-blue text-[24px]"
-                ><img src="../assets/img/icons/heart.svg" alt="" /></i
-            ></a>
-            <a
-              href="#"
-              class="flex font-semibold hover:text-blue duration-[0.3s] transition-all mr-4"
-            >
-              <i class="bx bxs-heart text-blue text-[14px]"></i>Избранные</a
-            >
-            <div class="column w-[2px] h-[32px] bg-[#F0F3F7] mr-4"></div>
-  
-            <div>
-              <!-- LOGIN BTN -->
-              <button
-                class="flex gap-2 duration-[0.3s] items-center font-semibold py-[10px] px-6 bg-[#EAEDF0] rounded-lg hover:bg-[#D5D8DB] transition-all"
-                onclick="openLoginModal()"
-              >
-                Войти <img src="./src/assets/img/icons/login.svg" alt="" />
-              </button>
-  
-              <!-- MODAL BACKGROUND -->
-  
-              <div
-                id="modal-background"
-                class="hidden fixed top-0 left-0 w-full h-full bg-gray-500 bg-opacity-50"
-              ></div>
-  
-              <!-- LOGIN MODAL -->
-  
-              <div
-                id="login-modal"
-                class="absolute left-1/2 -translate-x-2/4 shadow-lg rounded-lg top-36 flex-col hidden w-[379px] h-[500px] bg-white "
-              >
-                <div class="pb-5 p-5">
-                  <h4 class="text-2xl font-bold">Добро пожаловать!</h4>
-                  <p class="font-medium text-sm text-[#8E9297]">
-                    Войти в систему чтобы торговать в системе
-                  </p>
-                  <form action="" class="mt-7">
-                    <label for="uname" class="font-medium text-sm">Логин</label>
-                    <input
-                      type="text"
-                      required
-                      placeholder="Введите логин"
-                      name="uname"
-                      class="p-3 w-[338px] border text-sm font-normal rounded-lg mt-2 hover:bg-white duration-[0.3s] hover:border-[#388FF3] bg-slate-200"
-                    />
-  
-                    <label class="font-medium text-sm mt-4">Пароль</label>
-                    <input
-                      required
-                      type="password"
-                      placeholder=" Введите пароль"
-                      name="psw"
-                      class="p-3 w-[338px] border text-sm font-normal rounded-lg mt-2 hover:bg-white duration-[0.3s] hover:border-sky-500 bg-slate-200"
-                    />
-                    <span class="mt-2"
-                      ><a class="text-[#388FF3] font-normal text-xs" href="#"
-                        >Забыли пароль?</a
-                      ></span
-                    >
-                    <div class="mt-16">
-                      <button
-                        class="rounded-lg bg-[#388FF3] p-3 w-[338px] text-white text-base font-semibold hover:bg-white hover:text-[#388FF3] hover:border-[#388FF3] border duration-[0.3s]"
-                      >
-                        Войти
-                      </button>
-                      <div
-                        class="flex items-center gap-2 justify-between text-center my-2.5"
-                      >
-                        <div
-                          class="flex-row w-[70px] h-0.5 bg-[#F0F3F7] mr-4"
-                        ></div>
-                        <p class="text-xs font-normal text-[#8E9297]">
-                          Хотите стать продавцом?
-                        </p>
-                        <div
-                          class="flex-row w-[70px] h-0.5 bg-[#F0F3F7] mr-4"
-                        ></div>
-                      </div>
-                      <button
-                        id="apply"
-                        onclick="onApply()"
-                        class="rounded-lg border-[#388FF3] duration-[0.3s] hover:bg-[#388FF3] hover:text-white border text-[#388FF3] bg-white p-3 w-[338px] text-base font-semibold"
-                      >
-                        Подать заявку
-                      </button>
-                    </div>
-                  </form>
-                </div>
-              </div>
-  
-              <!-- REGISTER MODAL -->
-              <div
-                id="register-modal"
-                class="absolute left-1/2 -translate-x-2/4 shadow-lg rounded-lg flex-col w-[379px] h-[620px] bg-white hidden"
-              >
-                <div class="px-6 py-6">
-                  <h4 class="font-bold text-2xl">Подать заявку!</h4>
-                  <p class="text-sm font-medium text-gray-400 pt-2">
-                    Войти в систему чтобы торговать в системе
-                  </p>
-                  <form class="flex flex-col mt-[28px]" action="">
-                    <label class="text-gray-500 font-medium text-sm pb-2"
-                      >Ф.И.О</label
-                    >
-                    <input
-                      class="w-[338px] h-[44px] bg-slate-200 border rounded-lg duration-[0.3s] hover:border-sky-500 hover:bg-white placeholder:text-[#b8bbbd] font-normal text-sm outline-transparent pl-3"
-                      type="text"
-                      id=""
-                      required
-                      placeholder="Введите вашу Ф.И.О"
-                    />
-  
-                    <label class="text-gray-500 font-medium text-sm pt-4 pb-2"
-                      >Название продукта</label
-                    >
-                    <input
-                      class="w-[338px] h-[44px] bg-slate-200 border rounded-lg duration-[0.3s] hover:border-sky-500 hover:bg-white placeholder:text-[#b8bbbd] font-normal text-sm outline-transparent pl-3"
-                      type="text"
-                      id=""
-                      required
-                      placeholder="Введите название продукта"
-                    />
-  
-                    <label
-                      class="text-gray-500 font-medium text-sm pt-4 pb-2"
-                      for="select-category"
-                    >
-                      Категория
-                    </label>
-                    <select
-                      class="w-[338px] h-[44px] bg-slate-200 border rounded-lg duration-[0.3s] hover:border-sky-500 hover:bg-white"
-                      name="select-category"
-                      id=""
-                    >
-                      <option class="text-sm font-normal" value="">
-                        Выберерите категорию
-                      </option>
-                      <option value="choose-category">Холодильники</option>
-                      <option value="choose-category">Телевизоры</option>
-                      <option value="choose-category">
-                        Наушники и аксессуары
-                      </option>
-                      <option value="choose-category">Кухонная мебель</option>
-                      <option value="choose-category">Телефоны</option>
-                      <option value="choose-category">Бытовая техника</option>
-                    </select>
-  
-                    <label class="text-gray-500 font-medium text-sm pt-3 pb-2"
-                      >Телефон номер</label
-                    >
-                    <input
-                      class="w-[338px] h-[44px] bg-slate-200 border duration-[0.3s] rounded-lg hover:border-sky-500 hover:bg-white placeholder:text-[#b8bbbd] font-normal text-sm outline-transparent pl-3"
-                      type="text"
-                      id=""
-                      required
-                      placeholder="+998 (    ) ___--__"
-                    />
-  
-                    <div class="wrap mt-8 items-center text-center">
-                      <button
-                        class="w-[338px] h-[44px] bg-blue-600 border rounded-lg duration-[0.3s] text-base font-semibold text-white hover:text-blue-500 hover:bg-white"
-                        id="continue"
-                        onclick="onContinue()"
-                      >
-                        Продолжить
-                      </button>
-                      <a href="#!">
-                        <p
-                          class="text-xs font-normal text-gray-500 py-3 duration-[0.3s] hover:text-blue-500"
-                        >
-                          Если вы продавец то войдите на платформу
-                        </p>
-                      </a>
-                      <a href="#!">
-                        <button
-                          class="w-[338px] duration-[0.3s] h-[44px] bg-white border rounded-lg border-blue-500 text-base font-semibold text-blue-600 hover:text-white hover:bg-blue-500"
-                        >
-                          Войти
-                        </button>
-                      </a>
-                    </div>
-                  </form>
-                </div>
-              </div>
-  
-              <!-- FORGET PASSWORD MODAL -->
-            </div>
-          </div>
-        </div>
-      </header>
-      <section class="section_main">
-        <div
-          class="sectionmain_title max-w-[1200px] w-full px-4 mx-auto items-center"
-        >
-          <div class="section_titles text-center">
-            <h2 class="main_title mt-16 font-bold text-3xl">Объявления</h2>
-            <p class="main_text font-normal text-base text-slate-600 mt-2">
-              Вы можете найти все категории, которые вам нужны от покупателя
-            </p>
-          </div>
-  
-          <div
-            class="mainproductcards grid grid-cols-4 grid-flow-row gap-6 pt-10"
-            id="maincards"
-          ></div>
-  
-          <div
-            class="main_btn py-10 text-center container mx-auto justify-center flex"
-          >
-            <button
-              class="main_btn flex flex-row w-56 justify-center border rounded-full bg-slate-200 border-slate-300 gap-3 py-2 text-center px-6 font-semibold text-base"
-            >
-              Загрузить еще
-              <img
-                class="btn_img w-6"
-                src="../assets/img/icons/double-down.svg"
-                alt=""
-              />
-            </button>
-          </div>
-        </div>
-      </section>
-  
-
-
-
-
-
-
-    <script type="module" src="../js/main.js"></script>
-    <!-- <script src="../js/auth.js"></script> -->
-    <script src="../js/product.js"></script>
 </body>
 </html>
